--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.40.0", features = ["full"] }
+anyhow = "1.0.89"
+serde_json = { version = "1.0.128", features = ["preserve_order"] }
