--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "data-pipeline-rs"
 version = "0.1.0"
 edition = "2021"
+description = "Data processing pipelines"
+license = "Apache-2.0/MIT"
 
 [dependencies]
 tokio = { version = "1.40.0", features = ["full"] }
